# travel

./: .gitignore  FEATURE_01_COMPLETE.md  PROGRESS_TRACKER.md  PROJECT_INDEX.md  SESSION_SUMMARY.md  pyproject.toml
backend/: .env.example  DEVELOPER_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  articles.py
backend/app/api/v1/endpoints/: __init__.py
backend/app/core/: __init__.py  config.py
backend/app/db/: base.py
backend/app/models/: __init__.py  models.py
backend/app/repositories/: __init__.py  base.py
backend/app/schemas/: __init__.py
backend/app/services/: __init__.py  article_processor.py  nlp_service.py  text_processor.py
backend/migrations/: alembic.ini  env.py  script.py.mako
backend/migrations/versions/: 001_initial.py
backend/tests/: conftest.py
backend/tests/unit/: test_article_ingestion.py  test_models.py
comet/: BritishMuseumVisit.md
specs/: INTERACTIVE_ARTICLE_SPEC.md  QUICKSTART.md  README.md
specs/01-article-ingestion-parsing/: IMPLEMENTATION.md  PLAN.md  SPEC.md
specs/02-question-generation-engine/: PLAN.md  SPEC.md
specs/03-interactive-conversation-flow/: PLAN.md  SPEC.md
specs/04-session-management/: PLAN.md  SPEC.md
specs/05-user-response-handling/: PLAN.md  SPEC.md
specs/06-analytics-engine/: PLAN.md  SPEC.md
specs/07-backend-api/: PLAN.md  SPEC.md
specs/08-frontend-ui/: PLAN.md  SPEC.md
specs/09-database-models/: PLAN.md  SPEC.md
specs/10-ai-integration/: PLAN.md  SPEC.md
